2007-02-17  Jim Lynch <jim@jam.sessionsnet.org>
	* changed functionality and name of new function from two commits ago;
	it now appends to an existing string rather than allocates and returns
	a new string. name changed from stringify_PQresultStatus to
	append_PQresultStatus. added allocation responsibility to caller, who
	now must allocate the string, pass it in, use the result then free the
	string. function docs (in nspostgres.c just above function) altered 
	appropriately.

2007-02-17  Jim Lynch <jim@jam.sessionsnet.org>
	* fixed some places where Tcl_AppendResult didn't have NULL as their
	last parameter

2007-02-17  Jim Lynch <jim@jam.sessionsnet.org>
	* factor:
	we want to add the PQexec result status code to a string, so 
	we will use a Tcl_DString which is a dynamic string. So, create
	a function called stringify_PQresultStatus which returns pointer
	to a newly allocated DString containing the result. This also checks
	whether the incoming result pointer is null.
	* replace where the driver output the result status, with calls
	to stringify_PQresultStatus.
	
2007-02-15  Jim Lynch <jim@jam.sessionsnet.org>
	* Make the output of DbFail() more prettyer.

2007-02-14  Jim Lynch <jim@jam.sessionsnet.org>
	* it didn't, so now I'm moving the message inside the quotation marks
	in the message of the form (exception FOO, "...")

2007-02-14  Jim Lynch <jim@jam.sessionsnet.org>
	* observed that data added to tcl result doesn't all get through,
	so I'm now seeing if removing the newline chars from the message 
	appended to the tcl result lets more of the message through.

2007-02-14  Jim Lynch <jim@jam.sessionsnet.org>
	* in each function that has one, change the name of all local 
	NsPgConn* variables to nspgConn, to make things a little easier
	to read.
	* when driver throws an error message from a call to PQexec,
	add the result status returned from the pg server. For more
	info, see: 
	http://www.postgresql.org/docs/8.1/static/libpq-exec.html